src/snapshots/bvr__tui__tests__e2e_journey_actionable_tree_attention_flow.snap
---
source: src/tui.rs
expression: artifact
---
=== E2E Journey: actionable→tree→attention | 120x35 ===

--- Step 1: main_start ---
┌────────────────────────────────────────────┐┌────────────────────────────────────────────────────────────────────────┐
│  TYPE PRI STATUS      ID                   ││ ✨ Feature work                                                        │
│▸ ✨ P1 OPEN A Feature work                 ││                                                                        │
│  🐛 P2 OPEN B Bug fix                      ││ ┌────┬────────┬──────────┬──────────┬─────────┐                        │
│  📋 P3 OPEN C UI polish                    ││ │ ID │ Status │ Priority │ Assignee │ Created │                        │
│                                            ││ ├────┼────────┼──────────┼──────────┼─────────┤                        │
│                                            ││ │ A  │ OPEN   │ ⚡ P1    │ —        │ —       │                        │
│                                            ││ └────┴────────┴──────────┴──────────┴─────────┘                        │
│                                            ││                                                                        │
│                                            ││ Labels: backend, urgent                                                │
│                                            ││ C copy id • L label filter • w repo filter • t time-travel             │
│                                            ││                                                                        │
│                                            ││ Graph Analysis                                                         │
│                                            ││ • Impact Depth: 1 (downstream chain length)                            │
│                                            ││ • Centrality: PR 0.3333 • BW 0.0000 • EV 0.5774                        │
│                                            ││ • Flow Role: Hub 0.0000 • Authority 0.0000                             │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│               Page 1 of 1 (items 1-3 of 3) ││                                                                        │
└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0                   3 issues  tab focus │ C copy │ x export │ / search │ ? help

--- Step 2: actionable_entry ---
 ⚡ ACTIONABLE ITEMS  │  3 items in 3 tracks

 💡 RECOMMENDED: Start with A → highest impact: A (score 0.59)

 TRACK A  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
▸ └─ ⚡ A Feature work

 TRACK B  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
  └─ 🔹 B Bug fix

 TRACK C  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
  └─ ☕ C UI polish



















 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0               3 issues  j/k nav │ tab tracks/items │ ⏎ view │ a list │ ? help

--- Step 3: actionable_detail_nav ---
 ⚡ ACTIONABLE ITEMS  │  3 items in 3 tracks

 💡 RECOMMENDED: Start with A → highest impact: A (score 0.59)

 TRACK A  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
▸ └─ ⚡ A Feature work

 TRACK B  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
  └─ 🔹 B Bug fix

 TRACK C  independent issue — can execute in parallel
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
  └─ ☕ C UI polish



















 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0               3 issues  j/k nav │ tab tracks/items │ ⏎ view │ a list │ ? help

--- Step 4: tree_entry ---
┃ • ✨ P1 A Feature work 🟢
  • 🐛 P2 B Bug fix 🟢
  • 📋 P3 C UI polish 🟢































 📋 ALL  ○3 ◉3 ◈0 ●0                                      3 issues  j/k nav │ h/l fold │ ⏎ toggle │ tab detail │ T list

--- Step 5: tree_navigate ---
┃ • ✨ P1 A Feature work 🟢
  • 🐛 P2 B Bug fix 🟢
  • 📋 P3 C UI polish 🟢































 📋 ALL  ○3 ◉3 ◈0 ●0                                      3 issues  j/k nav │ h/l fold │ ⏎ toggle │ tab detail │ T list

--- Step 6: attention_entry ---
  Rank | Label              | Attention  | Reason
┃ 1    | backend            | 0.67       | pr=0.67 stale=1.00 block=0 closed30=0
  2    | frontend           | 0.33       | pr=0.33 stale=1.00 block=0 closed30=0
  3    | urgent             | 0.33       | pr=0.33 stale=1.00 block=0 closed30=0






























 📋 ALL  ○3 ◉3 ◈0 ●0                                 3 issues  j/k nav │ 1-9 filter │ ⏎ filter │ tab detail │ esc close

--- Step 7: attention_detail ---
  Rank | Label              | Attention  | Reason                       ┌──────────────────────────────────────────────┐
  1    | backend            | 0.67       | pr=0.67 stale=1.00 block=0 c…│ Label: frontend                              │
┃ 2    | frontend           | 0.33       | pr=0.33 stale=1.00 block=0 c…│ Rank: #2                                     │
  3    | urgent             | 0.33       | pr=0.33 stale=1.00 block=0 c…│ Attention Score: 0.333                       │
                                                                        │ Normalized: 0.000                            │
                                                                        │                                              │
                                                                        │ Breakdown:                                   │
                                                                        │   Open:     1                                │
                                                                        │   Blocked:  0                                │
                                                                        │   Stale:    0                                │
                                                                        │                                              │
                                                                        │ Factors:                                     │
                                                                        │   PageRank sum:     0.3333                   │
                                                                        │   Staleness factor: 1.00                     │
                                                                        │   Block impact:     0.0                      │
                                                                        │   Velocity factor:  1.00                     │
                                                                        │                                              │
                                                                        │ Reason: 1 open issue(s)                      │
                                                                        │                                              │
                                                                        │ Open issues (1):                             │
                                                                        │   C                                          │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
 📋 ALL  ○3 ◉3 ◈0 ●0                   3 issues  ^j/k scroll │ j/k nav │ 1-9 filter │ ⏎ filter │ tab detail │ esc close

--- Step 8: main_return ---
┌────────────────────────────────────────────┐┌────────────────────────────────────────────────────────────────────────┐
│  TYPE PRI STATUS      ID                   ││ ✨ Feature work                                                        │
│▸ ✨ P1 OPEN A Feature work                 ││                                                                        │
│  🐛 P2 OPEN B Bug fix                      ││ ┌────┬────────┬──────────┬──────────┬─────────┐                        │
│  📋 P3 OPEN C UI polish                    ││ │ ID │ Status │ Priority │ Assignee │ Created │                        │
│                                            ││ ├────┼────────┼──────────┼──────────┼─────────┤                        │
│                                            ││ │ A  │ OPEN   │ ⚡ P1    │ —        │ —       │                        │
│                                            ││ └────┴────────┴──────────┴──────────┴─────────┘                        │
│                                            ││                                                                        │
│                                            ││ Labels: backend, urgent                                                │
│                                            ││ C copy id • L label filter • w repo filter • t time-travel             │
│                                            ││                                                                        │
│                                            ││ Graph Analysis                                                         │
│                                            ││ • Impact Depth: 1 (downstream chain length)                            │
│                                            ││ • Centrality: PR 0.3333 • BW 0.0000 • EV 0.5774                        │
│                                            ││ • Flow Role: Hub 0.0000 • Authority 0.0000                             │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│                                            ││                                                                        │
│               Page 1 of 1 (items 1-3 of 3) ││                                                                        │
└────────────────────────────────────────────┘└────────────────────────────────────────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○3 ◉3 ◈0 ●0                   3 issues  tab focus │ C copy │ x export │ / search │ ? help
