src/snapshots/bvr__tui__tests__e2e_journey_narrow_geometry_stress.snap
---
source: src/tui.rs
expression: artifact
---
=== E2E Journey: narrow-geometry-stress | 40x15 ===

--- Step 1: narrow_main ---
┌──────────────────────────────────────┐
│  TYPE PRI STATUS      ID             │
│▸ 📋 P0 🔓1 OPEN A Root               │
│  📋 P0 OPEN B Dependent              │
│  📋 P0 DONE C Closed                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│         Page 1 of 1 (items 1-3 of 3) │
└──────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○2 ◉1 ◈0 ●

--- Step 2: narrow_board ---
bvr 1 Main b Board i In  | 3/3 | all
           BOARD [by: Status]
📋 OPEN (2) 🔄 IN PROGR…🚫 BLOCKED …✅ …
╭──────────╮╭──────────╮╭──────────╮╭──╮
│ ╭──────╮ ││          ││          ││  │
│ │ 📋 … │ ││          ││          ││  │
│ │ Root │ ││          ││          ││  │
│ │ ⚡→… │ ││          ││          ││  │
│ ╰──────╯ ││ (empty)  ││ (empty)  ││  │
│          ││          ││          ││  │
│          ││          ││          ││  │
│          ││          ││          ││  │
│  ↕ 1/2   ││          ││          ││  │
╰──────────╯╰──────────╯╰──────────╯╰──╯
 📋 ALL  1-4:col • o/c/r:filter • s:grou

--- Step 3: narrow_board_nav ---
bvr 1 Main b Board i In  | 3/3 | all
           BOARD [by: Status]
📋 OPEN (2) 🔄 IN PROGR…🚫 BLOCKED …✅ …
╭──────────╮╭──────────╮╭──────────╮╭──╮
│ ╭──────╮ ││          ││          ││  │
│ │ 📋 … │ ││          ││          ││  │
│ │ Root │ ││          ││          ││  │
│ │ ⚡→… │ ││          ││          ││  │
│ ╰──────╯ ││ (empty)  ││ (empty)  ││  │
│          ││          ││          ││  │
│          ││          ││          ││  │
│          ││          ││          ││  │
│  ↕ 1/2   ││          ││          ││  │
╰──────────╯╰──────────╯╰──────────╯╰──╯
 📋 ALL  1-4:col • o/c/r:filter • s:grou

--- Step 4: narrow_graph ---
bvr 1 Main b Board i In g Graph  | 3/3 |
┌Graph View [focus]────────────────────┐
│                                      │
│ Graph: nodes=3 edges=1 cycles=0 acti │
│ Focus: node 3/3 -> C (Closed)        │
│ Focused edge: list focus (Tab to ins │
│                                      │
│                   ╔═════════════════ │
│                   ║[x T p0] C        │
│                   ║Closed            │
│                   ║up:0 down:0       │
│                   ╚═════════════════ │
│                                      │
└──────────────────────────────────────┘
h/l nodes │ j/k nodes │ ^u/L jump

--- Step 5: narrow_insights ---
bvr 1 Main b Board i In  | 3/3 | all
┌Insight Queu┐┌Insight Detail──────────┐
│            ││                        │
│ [Bottlenec ││ Analytics Cockpit      │
│            ││ System Radar | bottlen │
│ Signal Til ││                        │
│ [Flow ] op ││ Focus: A (Root)        │
│ [Risk ] bo ││ Status: open | Priorit │
│            ││                        │
│ Outlier Ra ││ Metric Strip           │
│ [Lead ] bo ││ [Rank ] pagerank=0.480 │
│ [Rank ] in ││ [HITS ] hub=0.0000 aut │
│            ││                        │
└────────────┘└────────────────────────┘
Insights [bottlenecks] │ Tab focus

--- Step 6: narrow_insights_cycle ---
bvr 1 Main b Board i In  | 3/3 | all
┌Insight Queu┐┌Insight Detail──────────┐
│            ││                        │
│ [Keystones ││ Analytics Cockpit      │
│            ││ System Radar | bottlen │
│ Signal Til ││                        │
│ [Flow ] op ││ Focus: A (Root)        │
│ [Risk ] bo ││ Status: open | Priorit │
│            ││                        │
│ Outlier Ra ││ Metric Strip           │
│ [Lead ] bo ││ [Rank ] pagerank=0.480 │
│ [Rank ] in ││ [HITS ] hub=0.0000 aut │
│            ││                        │
└────────────┘└────────────────────────┘
Insights [keystones] │ Tab focus

--- Step 7: narrow_actionable ---
bvr 1 Main b Board i In a Act  | 3/3 | a
┌Execution Tr┐┌Track Detail────────────┐
│            ││                        │
│ ⚡ ACTIONA ││ TRACK 1                │
│ RECOMMENDE ││ completing A unblocks  │
│            ││ 1 actionable item      │
│ ▸ TRACK 1  ││                        │
│   1 item   ││ ▸ A  score 0.691       │
│    └─ P0 A ││   Root                 │
│            ││   Unblocks: B          │
│            ││   Claim: br update A - │
│            ││                        │
│            ││                        │
└────────────┘└────────────────────────┘
Actionable: 1 tracks, 1 items │ j/k navi

--- Step 8: narrow_tree ---
bvr 1 Main b Board i In T Tree  | 3/3 |
┌Dependency T┐┌Issue Detail────────────┐
│            ││                        │
│ Dependency ││ ID: A                  │
│ ────────── ││ Title: Root            │
│ ▸ [-] o P0 ││ Status: open           │
│   │   └──  ││ Type: task             │
│       x P0 ││ Depth: 0               │
│            ││ Labels: core, parity   │
│            ││                        │
│            ││ Dependents (1):        │
│            ││   B - Dependent        │
│            ││                        │
└────────────┘└────────────────────────┘
Tree: 3 nodes │ j/k navigate

--- Step 9: narrow_main_return ---
┌──────────────────────────────────────┐
│  TYPE PRI STATUS      ID             │
│  📋 P0 🔓1 OPEN A Root               │
│  📋 P0 OPEN B Dependent              │
│▸ 📋 P0 DONE C Closed                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│         Page 1 of 1 (items 1-3 of 3) │
└──────────────────────────────────────┘
 📋 ALL  L:labels • h:detail  ○2 ◉1 ◈0 ●
