src/snapshots/bvr__tui__tests__snap_actionable_detail_focus.snap
---
source: src/tui.rs
expression: text
---
 ⚡ ACTIONABLE ITEMS  │  1 items in 1 tracks

 💡 RECOMMENDED: Start with A → highest impact: A (score 0.69, unblocks 1 issue(s))

 TRACK A  completing A unblocks 1 issue(s)
┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
▸ └─ 🔥 A Root →1
      ↳ Unblocks: B





















 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1        3 issues  j/k nav │ tab tracks/items │ ⏎ view │ a list
