src/snapshots/bvr__tui__tests__snap_after_board_search.snap
---
source: src/tui.rs
expression: text
---
                                         BOARD [by: Status]
     📋 OPEN (2) 2🔴        🔄 IN PROGRESS (0)         🚫 BLOCKED (0)          ✅ CLOSED (1) 1🔴
╭───────────────────────╮╭───────────────────────╮╭───────────────────────╮╭───────────────────────╮
│ ╭───────────────────╮ ││                       ││                       ││ ╭───────────────────╮ │
│ │ 📋 P0 A 5mo ag    │ ││                       ││                       ││ │ 📋 P0 C 4mo ag    │ │
│ │ Root              │ ││                       ││                       ││ │ Closed            │ │
│ │ ⚡→1 core,parity  │ ││                       ││                       ││ │                   │ │
│ ╰───────────────────╯ ││                       ││                       ││ ╰───────────────────╯ │
│                       ││                       ││                       ││                       │
│ ╭───────────────────╮ ││                       ││                       ││                       │
│ │ 📋 P0 B 4mo ag    │ ││                       ││                       ││                       │
│ │ Dependent         │ ││                       ││                       ││                       │
│ │ 🚫←A (Root)       │ ││                       ││                       ││                       │
│ ╰───────────────────╯ ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││        (empty)        ││        (empty)        ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
╰───────────────────────╯╰───────────────────────╯╰───────────────────────╯╰───────────────────────╯
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1           3 issues  hjkl nav │ G bottom │ tab detail │ b list
