src/snapshots/bvr__tui__tests__snap_after_insights_panel_cycle.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights | mode=Insights | focus=list | issues=3/3 | filter=all |
╭───────────────────────────────╮╭───────────────────────────────╮╭───────────────────────────────╮
│ 🚧 Bottlenecks (2)            ││ 🏛 Keystones (2)               ││ 🌐 Influencers (3)            │
│ Betweenness Centrality        ││ Impact Depth                  ││ Eigenvector Centrality        │
│ Measures how often a bead     ││ Measures how deep in the      ││ Scores beads by their         │
│     0.481  📋 ● Root          ││       2.0  📋 ● Root          ││ ▸   1.000  📋 ● Root          │
╰───────────────────────────────╯╰───────────────────────────────╯╰───────────────────────────────╯
╭───────────────────────────────╮╭───────────────────────────────╮╭───────────────────────────────╮
│ 🛰 Hubs (3)                    ││ 📚 Authorities (3)            ││ 🧠 Cores (3)                  │
│ HITS Hub Score                ││ HITS Authority Score          ││ k-core Cohesion               │
│ Beads that depend on many     ││ Beads that are depended upon  ││ Nodes with highest k-core     │
│     1.000  📋 ● Dependent     ││     1.000  📋 ● Root          ││         1  📋 ● Root          │
╰───────────────────────────────╯╰───────────────────────────────╯╰───────────────────────────────╯
╭───────────────────────────────╮╭───────────────────────────────╮╭───────────────────────────────╮
│ 🪢 Cut Points (0)             ││ ⏳ Slack (2)                  ││ 🔄 Cycles (0)                 │
│ Articulation Vertices         ││ Longest-path slack            ││ Circular Dependencies         │
│ Nodes whose removal           ││ Distance from critical chain  ││ Groups of beads forming       │
│                               ││       0.0  📋 ● Root          ││ ✓ No cycles detected          │
╰───────────────────────────────╯╰───────────────────────────────╯╰───────────────────────────────╯
╭─────────────────────────────────────────────────────────────────────────────────────────────────╮
│ 🎯 Priority (2)   Agent-First Triage                                                            │
│ ╭────────────────────────────╮ ╭────────────────────────────╮                                   │
│ │  0.69                      │ │  0.43                      │                                   │
│ │ 📋 OPEN ⚡P0               │ │ 📋 OPEN ⚡P0               │                                   │
│ │ Root                       │ │ Dependent                  │                                   │
│ │ PR:████████████████ BW:░░░ │ │ PR:█████████░░░░░░░ BW:░░░ │                                   │
│ │ ↳ Unblocks 1               │ │ ↳ Unblocks 0               │                                   │
│ ╰────────────────────────────╯ ╰────────────────────────────╯                                   │
╰─────────────────────────────────────────────────────────────────────────────────────────────────╯
 📋 ALL  Influencers (PageRank) • L:labels • h:detail  ○2 ◉1 ◈0 ●1             3 issues  h/l panels
