src/snapshots/bvr__tui__tests__snap_attention_detail_focus.snap
---
source: src/tui.rs
expression: text
---
  Rank | Label              | Attention  | Reason           ┌──────────────────────────────────────┐
┃ 1    | backend            | 0.67       | pr=0.67 stale=1.0│ Label: backend                       │
  2    | frontend           | 0.33       | pr=0.33 stale=1.0│ Rank: #1                             │
  3    | urgent             | 0.33       | pr=0.33 stale=1.0│ Attention Score: 0.667               │
                                                            │ Normalized: 1.000                    │
                                                            │                                      │
                                                            │ Breakdown:                           │
                                                            │   Open:     2                        │
                                                            │   Blocked:  0                        │
                                                            │   Stale:    0                        │
                                                            │                                      │
                                                            │ Factors:                             │
                                                            │   PageRank sum:     0.6667           │
                                                            │   Staleness factor: 1.00             │
                                                            │   Block impact:     0.0              │
                                                            │   Velocity factor:  1.00             │
                                                            │                                      │
                                                            │ Reason: 2 open issue(s)              │
                                                            │                                      │
                                                            │ Open issues (2):                     │
                                                            │   A                                  │
                                                            │   B                                  │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            │                                      │
                                                            └──────────────────────────────────────┘
 📋 ALL  ○3 ◉3 ◈0 ●0           3 issues  ^j/k scroll │ j/k nav │ 1-9 filter │ ⏎ filter │ tab detail
