src/snapshots/bvr__tui__tests__snap_attention_list_overview.snap
---
source: src/tui.rs
expression: text
---
  Rank | Label              | Attention  | Reason
┃ 1    | backend            | 0.67       | pr=0.67 stale=1.00 block=0 closed30=0
  2    | frontend           | 0.33       | pr=0.33 stale=1.00 block=0 closed30=0
  3    | urgent             | 0.33       | pr=0.33 stale=1.00 block=0 closed30=0

























 📋 ALL  ○3 ◉3 ◈0 ●0             3 issues  j/k nav │ 1-9 filter │ ⏎ filter │ tab detail │ esc close
