src/snapshots/bvr__tui__tests__snap_board_detail_focus.snap
---
source: src/tui.rs
expression: text
---
                     BOARD [by: Status]                     ┌──────────────────────────────────────┐
📋 OPEN (2) 2🔴🔄 IN PROGRESS…🚫 BLOCKED (0) ✅ CLOSED (1) …│ 📋 Dependent                         │
╭─────────────╮╭─────────────╮╭─────────────╮╭─────────────╮│                                      │
│ ╭─────────╮ ││             ││             ││ ╭─────────╮ ││ ┌───┬─────┬───────┬──────┬───────┐   │
│ │ 📋 P0 … │ ││             ││             ││ │ 📋 P0 … │ ││ │ … │ St… │ Prio… │ Ass… │ Crea… │   │
│ │ Root    │ ││             ││             ││ │ Closed  │ ││ ├───┼─────┼───────┼──────┼───────┤   │
│ │ ⚡→1 c… │ ││             ││             ││ │         │ ││ │ B │ OP… │ 🔥 P0 │ —    │ 2026… │   │
│ ╰─────────╯ ││             ││             ││ ╰─────────╯ ││ └───┴─────┴───────┴──────┴───────┘   │
│             ││             ││             ││             ││ C copy id • L label filter • w repo  │
│ ╭─────────╮ ││             ││             ││             ││ filter • t time-travel               │
│ │ 📋 P0 … │ ││             ││             ││             ││                                      │
│ │ Depend… │ ││             ││             ││             ││ 🎯 Triage Insights                   │
│ │ 🚫←A (… │ ││             ││             ││             ││ • ⛔ Blocked by: A                   │
│ ╰─────────╯ ││             ││             ││             ││                                      │
│             ││             ││             ││             ││ Graph Analysis                       │
│             ││   (empty)   ││   (empty)   ││             ││ • Impact Depth: 1 (downstream chain  │
│             ││             ││             ││             ││ length)                              │
│             ││             ││             ││             ││ • Centrality: PR 0.2597 • BW 0.0000  │
│             ││             ││             ││             ││ • EV 0.0000                          │
│             ││             ││             ││             ││ • Flow Role: Hub 1.0000 • Authority  │
│             ││             ││             ││             ││ 0.0000                               │
│             ││             ││             ││             ││                                      │
│             ││             ││             ││             ││ Description                          │
│             ││             ││             ││             ││                                      │
│             ││             ││             ││             ││ Depends on A and should report       │
│             ││             ││             ││             ││ blocked state clearly.               │
│             ││             ││             ││             ││                                      │
│             ││             ││             ││             ││ Dependencies (1)                     │
╰─────────────╯╰─────────────╯╰─────────────╯╰─────────────╯└──────────────────────────────────────┘
 📋 ALL  ⚠ 2 alerts (!)   ○2 ◉1 ◈0 ●1      3 issues  ^j/k scroll │ hjkl nav │ G bottom │ tab detail
