src/snapshots/bvr__tui__tests__snap_board_medium.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights | mode=Board | focus=list | issues=3/3 | filter=all |
                                         BOARD [by: Status]
     📋 OPEN (2) 2🔴        🔄 IN PROGRESS (0)         🚫 BLOCKED (0)          ✅ CLOSED (1) 1🔴
╭───────────────────────╮╭───────────────────────╮╭───────────────────────╮╭───────────────────────╮
│ ╭───────────────────╮ ││                       ││                       ││ ╭───────────────────╮ │
│ │ 📋 P0 A 5mo ag    │ ││                       ││                       ││ │ 📋 P0 C 4mo ag    │ │
│ │ Root              │ ││                       ││                       ││ │ Closed            │ │
│ │ ⚡→1 core,parity  │ ││                       ││                       ││ │                   │ │
│ ╰───────────────────╯ ││                       ││                       ││ ╰───────────────────╯ │
│                       ││                       ││                       ││                       │
│ ╭───────────────────╮ ││                       ││                       ││                       │
│ │ 📋 P0 B 4mo ag    │ ││                       ││                       ││                       │
│ │ Dependent         │ ││                       ││                       ││                       │
│ │ 🚫←A (Root)       │ ││                       ││                       ││                       │
│ ╰───────────────────╯ ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││        (empty)        ││        (empty)        ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
│                       ││                       ││                       ││                       │
╰───────────────────────╯╰───────────────────────╯╰───────────────────────╯╰───────────────────────╯
 📋 ALL  1-4:col • o/c/r:filter • s:group • L:labels • /:search • ?:help  ○2 ◉1 ◈0 ●1
